products/neo-savant/products/neo-savant/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo-savant-ide
  namespace: default
  labels:
    "app.kubernetes.io/name": "neo-savant-ide"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "neo-savant-ide"
